# os9fetch

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/: OpenGLLibraryStub  OpenGLMemoryStub  OpenGLUtilityStub
src/: logo.hpp  os9fetch.cpp
src/console/: Console.cpp  Console.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  InitConsole.cpp  MacUtils.h
src/detection/: 68kextras.cpp  battery.cpp  cpu.cpp  disk.cpp  functions.cpp  functions.hpp  gestalt.cpp  gpu.cpp  memory.cpp  misc.cpp  os.cpp  rom.cpp  screen.cpp  uptime.cpp  user.cpp
src/detection/xpostcode/: CPUDevice.cpp  CPUDevice.h
